# Preboot-Oxide

./: .env  .env.dev  .git-blame-ignore-revs  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  SUPPORT.md  sample.preboot-oxide.yaml
assets/deb/DEBIAN/: control  postinst  postrm
assets/deb/usr/lib/systemd/system/: preboot-oxide.service
doc/: configuring.md  dhcp.md  from-deb.md  from-source.md  manual.md  quick-start.md  test-sheet.md  troubleshooting.md
scripts/: gen-version.sh  package-as-deb.sh  release.sh
src/: cli.rs  conf.rs  dhcp.rs  lib.rs  main.rs  tftp.rs  util.rs
test/: test-tftp.sh
tests/: conf.rs
tests/scripts/: tftp-single-file-transfer-stats.sh
tests/utils/: mod.rs
