[package]
name = "Preboot-Oxide"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.79"
async-std = "1.12.0"
dhcproto = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.30"
log = "0.4.20"
network-interface = "1.1.3"
polling = "3.7.0"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
socket2 = { version = "0.5.7", features = ["all"] }
