[package]
name = "preboot-oxide"
version = "1.5.12"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
anyhow = "1.0.79"
async-std = "1.12.0"
async-tftp = "0.3.6"
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive", "cargo"] }
dhcproto = { version = "0.11.0", features = ["serde"] }
dirs = "5.0.1"
dotenv = "0.15.0"
env_logger = "0.10.1"
futures = "0.3.30"
log = { version = "0.4.20", features = ["max_level_trace"] }
network-interface = "1.1.3"
once_cell = "1.19.0"
phf = { version = "0.11.2", features = ["macros"] }
polling = "3.7.0"
rand = "0.8.5"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
single-instance = "0.3.3"
socket2 = { version = "0.5.7", features = ["all"] }
yaml-rust2 = "0.8.0"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
